syntax="proto3";
package order;
option go_package="github.com/meles-z/go-grpc-microsevice/order";
import "google/protobuf/timestamp.proto";

message OrderItem{
    string id =1;
    string OrderId =2;
    string ProductId =3;
    int32 Quantity =4;
    double UnitPrice =5;
    double TotalPrice =6;
    google.protobuf.Timestamp created_at=7;
    google.protobuf.Timestamp updated_at=8;
    optional google.protobuf.Timestamp deleted_at=9;
}

message CreateOrderItemRequest{
    OrderItem orderItem =1;
}
message CreateOrderItemResponse{
    OrderItem orderItem =1;
}

message GetAllOrderItemsRequest{ 
}
message GetAllOrderItemsResponse{
    repeated OrderItem orderItems =1;
}

message GetOrderItemsByIdRequest{
    string id =1;
}
message GetOrderItemByIdResponse{
    OrderItem orderItem =1;
}
 

message UpdateOrderItemRequest{
    OrderItem orderItem =1;
}
message UpdateOrderItemResponse{
    OrderItem orderItem =1;
}

message DeleteOrderItemRequest{
    string id =1;
}
message DeleteOrderItemResponse{
   bool success=1;
}

service OrderItemService{
    rpc CreateOrderItem (CreateOrderItemRequest) returns (CreateOrderItemResponse);
    rpc GetAllOrdersItem (GetAllOrderItemsRequest) returns (stream OrderItem);
    rpc GetOrderItemsById (GetOrderItemsByIdRequest) returns (GetOrderItemByIdResponse);
    rpc UpdateOrderItem (UpdateOrderItemRequest) returns (UpdateOrderItemResponse);
    rpc DeleteOrderItem (DeleteOrderItemRequest) returns (DeleteOrderItemResponse);
}
